objects/EDX_Register_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>clcommon__Collateral__c</referenceTo>
        <relationshipLabel>EDX Register Interest</relationshipLabel>
        <relationshipName>EDX_Register_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>errors__c</fullName>
        <label>errors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationErrorStatusCode__c</fullName>
        <label>integrationErrorStatusCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationErrorStatus__c</fullName>
        <label>integrationErrorStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>meta__c</fullName>
        <label>meta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EDX Register Interest</label>
    <nameField>
        <displayFormat>EDRI-{0000000}</displayFormat>
        <label>EDX  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDX Register Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>